--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "npm-check-updates": "^16.5.6",
     "postcss": "^8.4.19",
     "postcss-cli": "^10.1.0",
-    "svg-transform-loader": "^2.0.13"
+    "svg-transform-loader": "^2.0.13",
+    "swiper": "^9.1.1"
   },
   "browserslist": [
     "last 5 version",
